Exclude empty folders from directory tree visualizations by default.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -80,21 +80,21 @@
     "    parsers[parsers<br/>Notebook and Module Parsing]\n",
     "    tree[tree<br/>Directory Tree Visualization]\n",
     "\n",
-    "    api_docs --> tree\n",
     "    api_docs --> core\n",
-    "    api_docs --> dependencies\n",
     "    api_docs --> parsers\n",
-    "    cli --> tree\n",
+    "    api_docs --> tree\n",
+    "    api_docs --> dependencies\n",
     "    cli --> parsers\n",
     "    cli --> api_docs\n",
+    "    cli --> tree\n",
     "    cli --> dependencies\n",
     "    dependencies --> dependencies\n",
     "    dependencies --> core\n",
     "    dependencies --> parsers\n",
     "    generators --> tree\n",
     "    generators --> core\n",
-    "    parsers --> tree\n",
     "    parsers --> core\n",
+    "    parsers --> tree\n",
     "    tree --> core\n",
     "```\n",
     "\n",
@@ -801,6 +801,13 @@
     "#### Functions\n",
     "\n",
     "```python\n",
+    "def _directory_has_notebooks(path: Path,                        # Directory to check\n",
+    "                            exclude_index: bool = True          # Exclude index.ipynb from check\n",
+    "                            ) -> bool:                          # True if contains notebooks\n",
+    "    \"Check if a directory contains any notebooks (directly or in subdirectories)\"\n",
+    "```\n",
+    "\n",
+    "```python\n",
     "def strip_markdown_links(\n",
     "    text: str  # TODO: Add description\n",
     ") -> str:  # TODO: Add return description\n",
@@ -814,7 +821,8 @@
     "                       show_notebooks_only: bool = False,   # Only show notebooks, not directories\n",
     "                       max_depth: Optional[int] = None,     # Maximum depth to traverse\n",
     "                       current_depth: int = 0,              # Current depth in traversal\n",
-    "                       exclude_index: bool = True           # Exclude index.ipynb from tree\n",
+    "                       exclude_index: bool = True,          # Exclude index.ipynb from tree\n",
+    "                       exclude_empty: bool = True           # Exclude empty directories\n",
     "                       ) -> List[str]:                      # Lines of tree output\n",
     "    \"Generate tree visualization lines for a directory\"\n",
     "```\n",
@@ -823,7 +831,8 @@
     "def generate_tree(path: Path = None,                    # Directory to visualize (defaults to nbs_path)\n",
     "                 show_notebooks_only: bool = False,     # Only show notebooks, not directories\n",
     "                 max_depth: Optional[int] = None,       # Maximum depth to traverse\n",
-    "                 exclude_index: bool = True             # Exclude index.ipynb from tree\n",
+    "                 exclude_index: bool = True,            # Exclude index.ipynb from tree\n",
+    "                 exclude_empty: bool = True             # Exclude empty directories\n",
     "                 ) -> str:                              # Tree visualization as string\n",
     "    \"Generate a tree visualization for a directory\"\n",
     "```\n",
@@ -838,7 +847,8 @@
     "def generate_tree_with_descriptions(path: Path = None,              # Directory to visualize\n",
     "                                   show_counts: bool = True,        # Show notebook counts for directories\n",
     "                                   max_depth: Optional[int] = None, # Maximum depth to traverse\n",
-    "                                   exclude_index: bool = True       # Exclude index.ipynb from tree\n",
+    "                                   exclude_index: bool = True,       # Exclude index.ipynb from tree\n",
+    "                                   exclude_empty: bool = True        # Exclude empty directories\n",
     "                                   ) -> str:                        # Tree with descriptions\n",
     "    \"Generate tree visualization with descriptions from notebooks\"\n",
     "```\n",
@@ -849,14 +859,17 @@
     "                               show_counts: bool = True,            # Show notebook counts\n",
     "                               max_depth: Optional[int] = None,     # Maximum depth\n",
     "                               current_depth: int = 0,              # Current depth\n",
-    "                               exclude_index: bool = True           # Exclude index.ipynb from tree\n",
+    "                               exclude_index: bool = True,          # Exclude index.ipynb from tree\n",
+    "                               exclude_empty: bool = True           # Exclude empty directories\n",
     "                               ) -> List[str]:                      # Tree lines\n",
     "    \"Generate tree lines for nested directory structure\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def generate_subdirectory_tree(subdir_path: Path,               # Path to subdirectory\n",
-    "                              show_descriptions: bool = True    # Include notebook descriptions\n",
+    "                              show_descriptions: bool = True,   # Include notebook descriptions\n",
+    "                              exclude_empty: bool = True,       # Exclude empty directories\n",
+    "                              exclude_index: bool = True        # Exclude index.ipynb\n",
     "                              ) -> str:                         # Tree visualization\n",
     "    \"Generate tree visualization for a specific subdirectory showing all notebooks\"\n",
     "```\n",
@@ -868,7 +881,9 @@
     "                                is_dir: bool,                   # Is directory\n",
     "                                show_descriptions: bool,        # Show descriptions\n",
     "                                depth: int,                     # Current depth\n",
-    "                                max_length: int = 0             # Max length for alignment (calculated externally)\n",
+    "                                max_length: int = 0,            # Max length for alignment (calculated externally)\n",
+    "                                exclude_empty: bool = True,     # Exclude empty directories\n",
+    "                                exclude_index: bool = True      # Exclude index.ipynb\n",
     "                                ) -> List[str]:                 # Tree lines\n",
     "    \"Generate tree lines for subdirectory visualization\"\n",
     "```\n",
