--- a/nbs/tree.ipynb
+++ b/nbs/tree.ipynb
@@ -76,6 +76,16 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "def _directory_has_notebooks(path: Path,                        # Directory to check\n",
+    "                            exclude_index: bool = True          # Exclude index.ipynb from check\n",
+    "                            ) -> bool:                          # True if contains notebooks\n",
+    "    \"Check if a directory contains any notebooks (directly or in subdirectories)\"\n",
+    "    notebooks = get_notebook_files(path, recursive=True)\n",
+    "    if exclude_index:\n",
+    "        notebooks = [nb for nb in notebooks if nb.name not in ['index.ipynb', '00_index.ipynb']]\n",
+    "    return len(notebooks) > 0\n",
+    "\n",
+    "#| export\n",
     "def strip_markdown_links(\n",
     "    text: str  # TODO: Add description\n",
     ") -> str:  # TODO: Add return description\n",
@@ -99,7 +109,8 @@
     "                       show_notebooks_only: bool = False,   # Only show notebooks, not directories\n",
     "                       max_depth: Optional[int] = None,     # Maximum depth to traverse\n",
     "                       current_depth: int = 0,              # Current depth in traversal\n",
-    "                       exclude_index: bool = True           # Exclude index.ipynb from tree\n",
+    "                       exclude_index: bool = True,          # Exclude index.ipynb from tree\n",
+    "                       exclude_empty: bool = True           # Exclude empty directories\n",
     "                       ) -> List[str]:                      # Lines of tree output\n",
     "    \"Generate tree visualization lines for a directory\"\n",
     "    lines = []\n",
@@ -110,6 +121,11 @@
     "    \n",
     "    # Get items to process\n",
     "    subdirs = sorted([d for d in path.iterdir() if d.is_dir()])\n",
+    "    \n",
+    "    # Filter out empty directories if exclude_empty is True\n",
+    "    if exclude_empty:\n",
+    "        subdirs = [d for d in subdirs if _directory_has_notebooks(d, exclude_index)]\n",
+    "    \n",
     "    notebooks = get_notebook_files(path, recursive=False)\n",
     "    \n",
     "    # Filter out index.ipynb if exclude_index is True\n",
@@ -135,7 +151,7 @@
     "            next_prefix = prefix + (\"    \" if is_last_item else \"│   \")\n",
     "            child_lines = generate_tree_lines(\n",
     "                item, next_prefix, is_last_item, show_notebooks_only, \n",
-    "                max_depth, current_depth + 1, exclude_index\n",
+    "                max_depth, current_depth + 1, exclude_index, exclude_empty\n",
     "            )\n",
     "            lines.extend(child_lines)\n",
     "        else:\n",
@@ -156,7 +172,8 @@
     "def generate_tree(path: Path = None,                    # Directory to visualize (defaults to nbs_path)\n",
     "                 show_notebooks_only: bool = False,     # Only show notebooks, not directories\n",
     "                 max_depth: Optional[int] = None,       # Maximum depth to traverse\n",
-    "                 exclude_index: bool = True             # Exclude index.ipynb from tree\n",
+    "                 exclude_index: bool = True,            # Exclude index.ipynb from tree\n",
+    "                 exclude_empty: bool = True             # Exclude empty directories\n",
     "                 ) -> str:                              # Tree visualization as string\n",
     "    \"Generate a tree visualization for a directory\"\n",
     "    if path is None:\n",
@@ -167,7 +184,7 @@
     "    lines = [f\"{path.name}/\"]\n",
     "    \n",
     "    # Generate tree lines\n",
-    "    tree_lines = generate_tree_lines(path, \"\", True, show_notebooks_only, max_depth, 0, exclude_index)\n",
+    "    tree_lines = generate_tree_lines(path, \"\", True, show_notebooks_only, max_depth, 0, exclude_index, exclude_empty)\n",
     "    lines.extend(tree_lines)\n",
     "    \n",
     "    return '\\n'.join(lines)"
@@ -194,13 +211,13 @@
      "output_type": "stream",
      "text": [
       "nbs/\n",
-      "├── 00_core.ipynb\n",
-      "├── 01_parsers.ipynb\n",
-      "├── 02_tree.ipynb\n",
-      "├── 03_api_docs.ipynb\n",
-      "├── 04_dependencies.ipynb\n",
-      "├── 05_generators.ipynb\n",
-      "└── 06_cli.ipynb\n"
+      "├── api_docs.ipynb\n",
+      "├── cli.ipynb\n",
+      "├── core.ipynb\n",
+      "├── dependencies.ipynb\n",
+      "├── generators.ipynb\n",
+      "├── parsers.ipynb\n",
+      "└── tree.ipynb\n"
      ]
     }
    ],
@@ -332,7 +349,8 @@
     "def generate_tree_with_descriptions(path: Path = None,              # Directory to visualize\n",
     "                                   show_counts: bool = True,        # Show notebook counts for directories\n",
     "                                   max_depth: Optional[int] = None, # Maximum depth to traverse\n",
-    "                                   exclude_index: bool = True       # Exclude index.ipynb from tree\n",
+    "                                   exclude_index: bool = True,       # Exclude index.ipynb from tree\n",
+    "                                   exclude_empty: bool = True        # Exclude empty directories\n",
     "                                   ) -> str:                        # Tree with descriptions\n",
     "    \"Generate tree visualization with descriptions from notebooks\"\n",
     "    if path is None:\n",
@@ -341,8 +359,13 @@
     "    \n",
     "    lines = []\n",
     "    \n",
-    "    # Check if this is a flat structure (no subdirectories)\n",
+    "    # Check if this is a flat structure (no subdirectories with notebooks)\n",
     "    subdirs = get_subdirectories(path, recursive=False)\n",
+    "    \n",
+    "    # Filter out empty directories if exclude_empty is True\n",
+    "    if exclude_empty:\n",
+    "        subdirs = [d for d in subdirs if _directory_has_notebooks(d, exclude_index)]\n",
+    "    \n",
     "    is_flat = len(subdirs) == 0\n",
     "    \n",
     "    if is_flat:\n",
@@ -395,7 +418,7 @@
     "    else:\n",
     "        # Nested structure - show directories with counts and descriptions\n",
     "        lines.append(f\"{path.name}/\")\n",
-    "        lines.extend(_generate_nested_tree_lines(path, \"\", show_counts, max_depth, 0, exclude_index))\n",
+    "        lines.extend(_generate_nested_tree_lines(path, \"\", show_counts, max_depth, 0, exclude_index, exclude_empty))\n",
     "    \n",
     "    return '\\n'.join(lines)"
    ]
@@ -413,7 +436,8 @@
     "                               show_counts: bool = True,            # Show notebook counts\n",
     "                               max_depth: Optional[int] = None,     # Maximum depth\n",
     "                               current_depth: int = 0,              # Current depth\n",
-    "                               exclude_index: bool = True           # Exclude index.ipynb from tree\n",
+    "                               exclude_index: bool = True,          # Exclude index.ipynb from tree\n",
+    "                               exclude_empty: bool = True           # Exclude empty directories\n",
     "                               ) -> List[str]:                      # Tree lines\n",
     "    \"Generate tree lines for nested directory structure\"\n",
     "    lines = []\n",
@@ -424,6 +448,11 @@
     "    \n",
     "    # Get subdirectories and notebooks\n",
     "    subdirs = get_subdirectories(path, recursive=False)\n",
+    "    \n",
+    "    # Filter out empty directories if exclude_empty is True\n",
+    "    if exclude_empty:\n",
+    "        subdirs = [d for d in subdirs if _directory_has_notebooks(d, exclude_index)]\n",
+    "    \n",
     "    notebooks = get_notebook_files(path, recursive=False)\n",
     "    \n",
     "    # Filter out index.ipynb if exclude_index is True\n",
@@ -486,7 +515,7 @@
     "            next_prefix = prefix + (\"    \" if is_last else \"│   \")\n",
     "            child_lines = _generate_nested_tree_lines(\n",
     "                item, next_prefix, show_counts, max_depth, \n",
-    "                current_depth + 1, exclude_index\n",
+    "                current_depth + 1, exclude_index, exclude_empty\n",
     "            )\n",
     "            lines.extend(child_lines)\n",
     "        else:\n",
@@ -573,13 +602,13 @@
      "output_type": "stream",
      "text": [
       "nbs/\n",
-      "├── 00_core.ipynb         # Core utilities and data models for nbdev project overview generation\n",
-      "├── 01_parsers.ipynb      # Parse notebook metadata, content, and extract function/class signatures with docments\n",
-      "├── 02_tree.ipynb         # Generate tree visualizations for nbdev project structure\n",
-      "├── 03_api_docs.ipynb     # Generate module overviews with formatted signatures for nbdev projects\n",
-      "├── 04_dependencies.ipynb # Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
-      "├── 05_generators.ipynb   # Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
-      "└── 06_cli.ipynb          # CLI commands for nbdev project overview generation and analysis\n"
+      "├── api_docs.ipynb     # Generate module overviews with formatted signatures for nbdev projects\n",
+      "├── cli.ipynb          # CLI commands for nbdev project overview generation and analysis\n",
+      "├── core.ipynb         # Core utilities and data models for nbdev project overview generation\n",
+      "├── dependencies.ipynb # Analyze cross-notebook imports and generate Mermaid.js dependency diagrams\n",
+      "├── generators.ipynb   # Auto-generate folder_name.ipynb notebooks for nbdev project organization\n",
+      "├── parsers.ipynb      # Parse notebook metadata, content, and extract function/class signatures with docments\n",
+      "└── tree.ipynb         # Generate tree visualizations for nbdev project structure\n"
      ]
     }
    ],
@@ -607,7 +636,9 @@
    "source": [
     "#| export\n",
     "def generate_subdirectory_tree(subdir_path: Path,               # Path to subdirectory\n",
-    "                              show_descriptions: bool = True    # Include notebook descriptions\n",
+    "                              show_descriptions: bool = True,   # Include notebook descriptions\n",
+    "                              exclude_empty: bool = True,       # Exclude empty directories\n",
+    "                              exclude_index: bool = True        # Exclude index.ipynb\n",
     "                              ) -> str:                         # Tree visualization\n",
     "    \"Generate tree visualization for a specific subdirectory showing all notebooks\"\n",
     "    lines = [f\"{subdir_path.name}/\"]\n",
@@ -617,11 +648,21 @@
     "    \n",
     "    # Get subdirectories\n",
     "    subdirs = get_subdirectories(subdir_path, recursive=False)\n",
+    "    \n",
+    "    # Filter out empty directories if exclude_empty is True\n",
+    "    if exclude_empty:\n",
+    "        subdirs = [d for d in subdirs if _directory_has_notebooks(d, exclude_index)]\n",
+    "    \n",
     "    for subdir in subdirs:\n",
     "        items.append((subdir, True))\n",
     "    \n",
     "    # Get notebooks\n",
     "    notebooks = get_notebook_files(subdir_path, recursive=False)\n",
+    "    \n",
+    "    # Filter out index.ipynb if exclude_index is True\n",
+    "    if exclude_index:\n",
+    "        notebooks = [nb for nb in notebooks if nb.name not in ['index.ipynb', '00_index.ipynb']]\n",
+    "    \n",
     "    for notebook in notebooks:\n",
     "        items.append((notebook, False))\n",
     "    \n",
@@ -644,7 +685,8 @@
     "    for i, (item, is_dir) in enumerate(items):\n",
     "        is_last = (i == len(items) - 1)\n",
     "        lines.extend(_generate_subdirectory_lines(\n",
-    "            item, \"\", is_last, is_dir, show_descriptions, 0, max_length\n",
+    "            item, \"\", is_last, is_dir, show_descriptions, 0, max_length,\n",
+    "            exclude_empty, exclude_index\n",
     "        ))\n",
     "    \n",
     "    return '\\n'.join(lines)"
@@ -664,7 +706,9 @@
     "                                is_dir: bool,                   # Is directory\n",
     "                                show_descriptions: bool,        # Show descriptions\n",
     "                                depth: int,                     # Current depth\n",
-    "                                max_length: int = 0             # Max length for alignment (calculated externally)\n",
+    "                                max_length: int = 0,            # Max length for alignment (calculated externally)\n",
+    "                                exclude_empty: bool = True,     # Exclude empty directories\n",
+    "                                exclude_index: bool = True      # Exclude index.ipynb\n",
     "                                ) -> List[str]:                 # Tree lines\n",
     "    \"Generate tree lines for subdirectory visualization\"\n",
     "    lines = []\n",
@@ -673,6 +717,10 @@
     "    extension = \"    \" if is_last else \"│   \"\n",
     "    \n",
     "    if is_dir:\n",
+    "        # Check if directory has notebooks before including it\n",
+    "        if exclude_empty and not _directory_has_notebooks(item, exclude_index):\n",
+    "            return lines  # Skip empty directory\n",
+    "        \n",
     "        # Directory entry\n",
     "        line = f\"{prefix}{connector}{item.name}/\"\n",
     "        lines.append(line)\n",
@@ -682,11 +730,21 @@
     "        \n",
     "        # Get nested subdirectories\n",
     "        subdirs = get_subdirectories(item, recursive=False)\n",
+    "        \n",
+    "        # Filter out empty directories if exclude_empty is True\n",
+    "        if exclude_empty:\n",
+    "            subdirs = [d for d in subdirs if _directory_has_notebooks(d, exclude_index)]\n",
+    "        \n",
     "        for subdir in subdirs:\n",
     "            sub_items.append((subdir, True))\n",
     "        \n",
     "        # Get notebooks in subdirectory\n",
     "        notebooks = get_notebook_files(item, recursive=False)\n",
+    "        \n",
+    "        # Filter out index.ipynb if exclude_index is True\n",
+    "        if exclude_index:\n",
+    "            notebooks = [nb for nb in notebooks if nb.name not in ['index.ipynb', '00_index.ipynb']]\n",
+    "        \n",
     "        for notebook in notebooks:\n",
     "            sub_items.append((notebook, False))\n",
     "        \n",
@@ -709,7 +767,8 @@
     "            sub_is_last = (j == len(sub_items) - 1)\n",
     "            lines.extend(_generate_subdirectory_lines(\n",
     "                sub_item, prefix + extension, sub_is_last, \n",
-    "                sub_is_dir, show_descriptions, depth + 1, local_max_length\n",
+    "                sub_is_dir, show_descriptions, depth + 1, local_max_length,\n",
+    "                exclude_empty, exclude_index\n",
     "            ))\n",
     "    else:\n",
     "        # Notebook entry\n",
