Add support for async functions.

--- a/nbs/parsers.ipynb
+++ b/nbs/parsers.ipynb
@@ -76,6 +76,7 @@
     "    docstring: Optional[str] = None               # Function docstring\n",
     "    decorators: List[str] = field(default_factory=list)  # List of decorators\n",
     "    is_exported: bool = False                     # Has #| export\n",
+    "    is_async: bool = False                        # Is an async function\n",
     "    source_line: Optional[int] = None             # Line number in source"
    ]
   },
@@ -155,9 +156,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def extract_docments_signature(node: ast.FunctionDef,          # AST function node\n",
-    "                              source_lines: List[str]          # Source code lines\n",
-    "                              ) -> str:                        # Function signature\n",
+    "def extract_docments_signature(node: Union[ast.FunctionDef, ast.AsyncFunctionDef],  # AST function node\n",
+    "                              source_lines: List[str]                               # Source code lines\n",
+    "                              ) -> str:                                             # Function signature\n",
     "    \"Extract function signature with docments-style comments\"\n",
     "    # Get the function definition lines\n",
     "    start_line = node.lineno - 1\n",
@@ -197,10 +198,15 @@
     "        if signature.endswith(':'):\n",
     "            signature = signature[:-1].strip()\n",
     "        \n",
+    "        # Ensure async keyword is preserved if present\n",
+    "        if isinstance(node, ast.AsyncFunctionDef) and not signature.startswith('async '):\n",
+    "            signature = 'async ' + signature\n",
+    "        \n",
     "        return signature\n",
     "    \n",
     "    # Fallback to basic signature\n",
-    "    return f\"def {node.name}(...)\""
+    "    async_prefix = \"async \" if isinstance(node, ast.AsyncFunctionDef) else \"\"\n",
+    "    return f\"{async_prefix}def {node.name}(...)\""
    ]
   },
   {
@@ -211,8 +217,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def _parse_decorators(node: Union[ast.ClassDef, ast.FunctionDef]  # AST node with decorators\n",
-    "                     ) -> List[str]:                              # List of decorator names\n",
+    "def _parse_decorators(node: Union[ast.ClassDef, ast.FunctionDef, ast.AsyncFunctionDef]  # AST node with decorators\n",
+    "                     ) -> List[str]:                                                    # List of decorator names\n",
     "    \"Parse decorators from an AST node\"\n",
     "    decorators = []\n",
     "    for decorator in node.decorator_list:\n",
@@ -231,10 +237,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def parse_function(node: ast.FunctionDef,               # AST function node\n",
-    "                  source_lines: List[str],              # Source code lines\n",
-    "                  is_exported: bool = False             # Has #| export\n",
-    "                  ) -> FunctionInfo:                    # Function information\n",
+    "def parse_function(node: Union[ast.FunctionDef, ast.AsyncFunctionDef],  # AST function node\n",
+    "                  source_lines: List[str],                             # Source code lines\n",
+    "                  is_exported: bool = False                            # Has #| export\n",
+    "                  ) -> FunctionInfo:                                   # Function information\n",
     "    \"Parse a function definition from AST\"\n",
     "    # Extract signature with docments\n",
     "    signature = extract_docments_signature(node, source_lines)\n",
@@ -245,12 +251,16 @@
     "    # Get decorators\n",
     "    decorators = _parse_decorators(node)\n",
     "    \n",
+    "    # Check if it's an async function\n",
+    "    is_async = isinstance(node, ast.AsyncFunctionDef)\n",
+    "    \n",
     "    return FunctionInfo(\n",
     "        name=node.name,\n",
     "        signature=signature,\n",
     "        docstring=docstring,\n",
     "        decorators=decorators,\n",
     "        is_exported=is_exported,\n",
+    "        is_async=is_async,\n",
     "        source_line=node.lineno\n",
     "    )"
    ]
@@ -270,7 +280,7 @@
     "    \"Parse methods from a class definition\"\n",
     "    methods = []\n",
     "    for item in node.body:\n",
-    "        if isinstance(item, ast.FunctionDef):\n",
+    "        if isinstance(item, (ast.FunctionDef, ast.AsyncFunctionDef)):\n",
     "            method_info = parse_function(item, source_lines, is_exported)\n",
     "            methods.append(method_info)\n",
     "    return methods"
@@ -519,7 +529,7 @@
     "        \n",
     "        # Only process top-level nodes\n",
     "        for node in tree.body:\n",
-    "            if isinstance(node, ast.FunctionDef):\n",
+    "            if isinstance(node, (ast.FunctionDef, ast.AsyncFunctionDef)):\n",
     "                func_info = parse_function(node, source_lines, is_exported)\n",
     "                functions.append(func_info)\n",
     "            \n",
@@ -642,7 +652,7 @@
     "        \n",
     "        # Parse all top-level definitions\n",
     "        for node in tree.body:\n",
-    "            if isinstance(node, ast.FunctionDef):\n",
+    "            if isinstance(node, (ast.FunctionDef, ast.AsyncFunctionDef)):\n",
     "                func_info = parse_function(node, source_lines, True)\n",
     "                module_info.functions.append(func_info)\n",
     "            \n",
