--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -80,21 +80,21 @@
     "    parsers[parsers<br/>Notebook and Module Parsing]\n",
     "    tree[tree<br/>Directory Tree Visualization]\n",
     "\n",
-    "    api_docs --> core\n",
+    "    api_docs --> dependencies\n",
     "    api_docs --> parsers\n",
     "    api_docs --> tree\n",
-    "    api_docs --> dependencies\n",
-    "    cli --> parsers\n",
+    "    api_docs --> core\n",
     "    cli --> api_docs\n",
     "    cli --> tree\n",
     "    cli --> dependencies\n",
+    "    cli --> parsers\n",
     "    dependencies --> dependencies\n",
-    "    dependencies --> core\n",
     "    dependencies --> parsers\n",
+    "    dependencies --> core\n",
     "    generators --> tree\n",
     "    generators --> core\n",
-    "    parsers --> core\n",
     "    parsers --> tree\n",
+    "    parsers --> core\n",
     "    tree --> core\n",
     "```\n",
     "\n",
@@ -641,23 +641,23 @@
     "#### Functions\n",
     "\n",
     "```python\n",
-    "def extract_docments_signature(node: ast.FunctionDef,          # AST function node\n",
-    "                              source_lines: List[str]          # Source code lines\n",
-    "                              ) -> str:                        # Function signature\n",
+    "def extract_docments_signature(node: Union[ast.FunctionDef, ast.AsyncFunctionDef],  # AST function node\n",
+    "                              source_lines: List[str]                               # Source code lines\n",
+    "                              ) -> str:                                             # Function signature\n",
     "    \"Extract function signature with docments-style comments\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def _parse_decorators(node: Union[ast.ClassDef, ast.FunctionDef]  # AST node with decorators\n",
-    "                     ) -> List[str]:                              # List of decorator names\n",
+    "def _parse_decorators(node: Union[ast.ClassDef, ast.FunctionDef, ast.AsyncFunctionDef]  # AST node with decorators\n",
+    "                     ) -> List[str]:                                                    # List of decorator names\n",
     "    \"Parse decorators from an AST node\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def parse_function(node: ast.FunctionDef,               # AST function node\n",
-    "                  source_lines: List[str],              # Source code lines\n",
-    "                  is_exported: bool = False             # Has #| export\n",
-    "                  ) -> FunctionInfo:                    # Function information\n",
+    "def parse_function(node: Union[ast.FunctionDef, ast.AsyncFunctionDef],  # AST function node\n",
+    "                  source_lines: List[str],                             # Source code lines\n",
+    "                  is_exported: bool = False                            # Has #| export\n",
+    "                  ) -> FunctionInfo:                                   # Function information\n",
     "    \"Parse a function definition from AST\"\n",
     "```\n",
     "\n",
@@ -730,6 +730,7 @@
     "    docstring: Optional[str]  # Function docstring\n",
     "    decorators: List[str] = field(...)  # List of decorators\n",
     "    is_exported: bool = False  # Has #| export\n",
+    "    is_async: bool = False  # Is an async function\n",
     "    source_line: Optional[int]  # Line number in source\n",
     "```\n",
     "\n",
