--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -80,16 +80,16 @@
     "    parsers[parsers<br/>Notebook and Module Parsing]\n",
     "    tree[tree<br/>Directory Tree Visualization]\n",
     "\n",
-    "    api_docs --> dependencies\n",
     "    api_docs --> parsers\n",
+    "    api_docs --> dependencies\n",
     "    api_docs --> tree\n",
     "    api_docs --> core\n",
     "    cli --> api_docs\n",
-    "    cli --> tree\n",
-    "    cli --> dependencies\n",
     "    cli --> parsers\n",
-    "    dependencies --> dependencies\n",
+    "    cli --> dependencies\n",
+    "    cli --> tree\n",
     "    dependencies --> parsers\n",
+    "    dependencies --> dependencies\n",
     "    dependencies --> core\n",
     "    generators --> tree\n",
     "    generators --> core\n",
@@ -329,50 +329,43 @@
     "#### Functions\n",
     "\n",
     "```python\n",
-    "def tree_cmd(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # Command line arguments - TODO: Add type hint\n",
+    "def tree_cmd(args:argparse.Namespace  # Parsed command line arguments\n",
+    "            ):                         # None\n",
     "    \"Generate tree visualization for nbdev project\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def api_cmd(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # Command line arguments - TODO: Add type hint\n",
+    "def api_cmd(args:argparse.Namespace  # Parsed command line arguments\n",
+    "           ):                         # None\n",
     "    \"Generate API documentation for nbdev project\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def deps_cmd(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # Command line arguments - TODO: Add type hint\n",
+    "def deps_cmd(args:argparse.Namespace  # Parsed command line arguments\n",
+    "            ):                         # None\n",
     "    \"Analyze and visualize module dependencies\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def overview_cmd(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # Command line arguments - TODO: Add type hint\n",
+    "def overview_cmd(args:argparse.Namespace  # Parsed command line arguments\n",
+    "                ):                         # None\n",
     "    \"Generate complete project overview\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def update_index_cmd(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # Command line arguments - TODO: Add type hint\n",
+    "def update_index_cmd(args:argparse.Namespace  # Parsed command line arguments\n",
+    "                    ):                         # None\n",
     "    \"Update index.ipynb with module documentation\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def update_comprehensive_cmd(\n",
-    "    args  # TODO: Add type hint and description\n",
-    "): # Command line arguments - TODO: Add type hint\n",
+    "def update_comprehensive_cmd(args:argparse.Namespace  # Parsed command line arguments\n",
+    "                            ):                         # None\n",
     "    \"Comprehensively update index.ipynb with all sections\"\n",
     "```\n",
     "\n",
     "```python\n",
-    "def main(\n",
-    "): # TODO: Add type hint\n",
+    "def main():  # None\n",
     "    \"Main CLI entry point for nbdev-overview\"\n",
     "```\n"
    ]
@@ -538,16 +531,14 @@
     "    modules: Dict[str, ModuleInfo] = field(...)  # Module name -> ModuleInfo\n",
     "    dependencies: List[ModuleDependency] = field(...)  # All dependencies\n",
     "    \n",
-    "    def add_module(\n",
-    "            self,\n",
-    "            module: ModuleInfo  # TODO: Add description\n",
-    "        ): # Add a module to the graph - TODO: Add type hint\n",
+    "    def add_module(self,\n",
+    "                       module:ModuleInfo  # Module to add to the graph\n",
+    "                       ):                  # None\n",
     "        \"Add a module to the dependency graph\"\n",
     "    \n",
-    "    def add_dependency(\n",
-    "            self,\n",
-    "            dep: ModuleDependency  # TODO: Add description\n",
-    "        ): # Add a dependency - TODO: Add type hint\n",
+    "    def add_dependency(self,\n",
+    "                           dep:ModuleDependency  # Dependency to add\n",
+    "                           ):                     # None\n",
     "        \"Add a dependency to the graph\"\n",
     "    \n",
     "    def get_module_dependencies(self, module_name: str  # Module to query\n",
@@ -809,9 +800,8 @@
     "```\n",
     "\n",
     "```python\n",
-    "def strip_markdown_links(\n",
-    "    text: str  # TODO: Add description\n",
-    ") -> str:  # TODO: Add return description\n",
+    "def strip_markdown_links(text:str  # Text that may contain Markdown links\n",
+    "                         ) -> str:  # Text with links removed, keeping link text\n",
     "    \"Strip Markdown links from text, keeping only the link text\"\n",
     "```\n",
     "\n",
