--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -81,15 +81,15 @@
     "    tree[tree<br/>Directory Tree Visualization]\n",
     "\n",
     "    api_docs --> parsers\n",
-    "    api_docs --> dependencies\n",
     "    api_docs --> tree\n",
+    "    api_docs --> dependencies\n",
     "    api_docs --> core\n",
+    "    cli --> tree\n",
     "    cli --> api_docs\n",
     "    cli --> parsers\n",
     "    cli --> dependencies\n",
-    "    cli --> tree\n",
-    "    dependencies --> parsers\n",
     "    dependencies --> dependencies\n",
+    "    dependencies --> parsers\n",
     "    dependencies --> core\n",
     "    generators --> tree\n",
     "    generators --> core\n",
@@ -693,7 +693,7 @@
     "\n",
     "```python\n",
     "def parse_code_cell(cell: Dict[str, Any]                       # Notebook code cell\n",
-    "                   ) -> Tuple[List[FunctionInfo], List[ClassInfo], List[VariableInfo], List[str]]:  # TODO: Add return description\n",
+    "                   ) -> Tuple[List[FunctionInfo], List[ClassInfo], List[VariableInfo], List[str]]:  # (functions, classes, variables, imports)\n",
     "    \"Parse a notebook code cell for functions, classes, variables, and imports\"\n",
     "```\n",
     "\n",
